# backend

./: .dockerignore  .env.example  .env.test.example  .gitignore  .gitlab-ci.yml  DATABASE-EXPORT.md  Dockerfile  README.md  config.py  database_adapter.py  main.py  pixi.toml  pyproject.toml  requirements.txt  supabase-schema.sql
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  vercel-deploy.yml
documentation/: AGENT_GUIDE.md  API_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CURRENT.md  DEPLOYMENT_PLAN.md  DEV_MODE.md  DOCKER_SETUP.md  ENVIRONMENT_MODES.md  ENVIRONMENT_QUICK_REFERENCE.md  GITHUB_REPO_CHECKLIST.md  GITHUB_TO_GITLAB_CI_DEPLOY.md  LOCAL_TESTING.md  PIXI_TASKS.md  QUICK_TEST_GUIDE.md  README.Docker.md  TESTING.md  reading-a11yhood-data.ipynb
migrations/: 20260415_deprecate_bigint_blog_posts_timestamps.sql  20260415_deprecate_bigint_user_activities_timestamp.sql  20260418_migrate_url_to_source_url.sql  20260508_add_images_table_and_references.sql
migrations/manual/: 20260508_hotfix_images_payload_and_dedupe.sql  README.md
migrations/test_only/: 20260414_add_truncate_test_tables_rpc.sql  20260415_dev_truncate_all_tables.sql  README.md
models/: activities.py  blog_posts.py  collections.py  discussions.py  product_urls.py  products.py  ratings.py  reviews.py  scrapers.py  sources.py  users.py
routers/: __init__.py  activities.py  blog_posts.py  collections.py  dev.py  discussions.py  images.py  product_urls.py  products.py  ratings.py  requests.py  scrapers.py  sources.py  users.py
scrapers/: __init__.py  base_scraper.py  github.py  goat.py  ravelry.py  scraper.py  thingiverse.py
scripts/: apply-migrations.sh  reset-test-db.sh  start-dev.sh  start-prod.sh  stop-dev.sh  stop-prod.sh  test-prod-image.sh  test_exports.sh
scripts/db-export/: export_full_database.py  validate_exports_schema.py  verify_restore_local.sh
scripts/lib/: backend-common.sh
seed_scripts/: README.md  run_seeds.py  seed_all.py  seed_oauth_configs.py  seed_scraper_search_terms.py  seed_supported_sources.py  seed_test_collections.py  seed_test_image.py  seed_test_product.py  seed_test_users.py
services/: auth.py  database.py  dev_mode.py  error_handler.py  id_generator.py  image_references.py  sanitizer.py  scheduled_scrapers.py  scrapers.py  security_logger.py  sources.py  timestamps.py
supabase/: config.toml
tests/: conftest.py  test_auth_fixture_determinism.py  test_collections.py  test_data.py  test_dev_endpoints.py  test_discussion_blocking.py  test_discussion_cascade.py  test_discussions.py  test_goat_scraper.py  test_images.py  test_images_integration.py  test_load_url.py  test_main.py  test_product_urls.py  test_products.py  test_ratings.py  test_ravelry_scraper.py  test_ravelry_source_adapter.py  test_scrapers.py  test_scrapers_integration.py  test_scrapers_live_api.py  test_security.py  test_seed_test_image.py  test_seed_test_image_integration.py  test_startup_security.py  test_supported_sources_flow.py  test_timestamp_serialization.py  test_unit_collections_helpers.py  test_unit_dev_auth.py  test_unit_discussions_logic.py  test_unit_normalization.py  test_unit_products_helpers.py  test_unit_row_limit.py  test_unit_security.py  test_unit_startup_security.py  test_user_requests.py  test_user_workflows.py  test_users.py
