[project]
name = "backend"
version = "0.1.0"
description = "Backend API"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.3",
    "bleach>=6.3.0",
    "cachetools<7",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pillow>=10.0.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "rich<15",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "supabase>=2.29.0",
    "uvicorn[standard]>=0.46.0",
    "websockets<16",
]

[tool.setuptools]
packages = ["models", "routers", "scrapers", "services", "migrations"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["EXAMPLES.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402"]  # E501: line too long (handled by formatter); E402: module-level import order (intentional in seeds/tests)

[tool.ruff.lint.isort]
known-first-party = ["models", "routers", "scrapers", "services", "migrations"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
    "ruff>=0.15.11",
]
