[project]
name = "backend"
version = "0.1.0"
description = "Backend API"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "cachetools<8",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pillow>=12.2.0",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "rich<16",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.47.0",
    "websockets<17",
]

[tool.setuptools]
packages = ["models", "routers", "scrapers", "services", "migrations"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["EXAMPLES.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402"]  # E501: line too long (handled by formatter); E402: module-level import order (intentional in seeds/tests)

[tool.ruff.lint.isort]
known-first-party = ["models", "routers", "scrapers", "services", "migrations"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
    "ruff>=0.15.11",
]
